# NuMCMCTools

./: .gitignore  LICENSE  Plot.py  PlotStack.py  README.md  pyproject.toml  requirements.txt  testuproot.py
examples/: custom_variables.py  load_mcmc.py  loadmcmcchains.py  mass_ordering.py  plot_triangle.py  simpleplots.py  test_variable.py  testuproot.py  testuprootextrabranch.py
numcmctools/: __init__.py  constraints.py  empirical_priors.py  jacobiangraph.py  mcmcsamples.py  plot.py  plotstack.py  variable.py
