[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build.meta"

[project]
name = "numcmctools"
version = "0.1.0"
license = { file = "LICENSE" }

description = "MCMC plotting framework for official results from neutrino oscillation experiments"
authors = [
  { name = "Asher Kaboth", email = ""},
  { name = "Artur Sztuc", email = "a.sztuc@ucl.ac.uk"}
]
maintainers = [
  { name = "Asher Kaboth", email = ""},
  { name = "Artur Sztuc", email = "a.sztuc@ucl.ac.uk"}
]

readme = "README.md"
homepage = "https://github.com/NuMCMCTools/NuMCMCTools"
keywords = ["neutrino", "physics", "HEP", "MCMC", "plotting"]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: OS Independent',
],

requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
  "sympy",
  "tqdm",
  "uproot"
]

[project.urls]
Homepage = "https://github.com/NuMCMCTools/NuMCMCTools"
Documentation = "https://github.com/NuMCMCTools/NuMCMCTools/blob/main/README.md"
Repository = "https://github.com/NuMCMCTools/NuMCMCTools.git"
"Issues" = "https://github.com/NuMCMCTools/NuMCMCTools/issues"

[project.scripts]
plot_triangle = "numcmctools.examples.plot_triangle:main"

[tool.setuptools]
package-data = {"rootfiles" = ["*root"]}
